Added other files

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -9,6 +9,7 @@
   padding-bottom: 70px;
   margin-top: 70px;
   border-radius: 4px;
+  background: beige;
 }
 
 .heading-align {
@@ -38,4 +39,10 @@
   color: white;
   border-radius: 6px;
   font-size: 15px;
+}
+
+.signup-path {
+  margin-top: 19px;
+  text-align: left;
+  margin-left: 33px;
 }
